--- a/scss/components/_button-group.scss
+++ b/scss/components/_button-group.scss
@@ -99,14 +99,16 @@ $buttongroup-radius-on-each: true !default;
     }
     @else {
       // One child
-      &:first-child:last-child {
-        width: calc(100% - #{$spacing});
+      &:first-child {
+        &:last-child {
+          width: calc(100% - #{$spacing});
+        }
       }
 
       // Two or more childreen
       @for $i from 2 through $buttongroup-expand-max {
-        &:first-child:nth-last-child(#{$i}) {
-          &, &:first-child:nth-last-child(#{$i}) ~ #{$selector} {
+        &:first-child:nth-last-child(#{$i}) { // sass-lint:disable-line force-pseudo-nesting
+          &, &:first-child:nth-last-child(#{$i}) ~ #{$selector} { // sass-lint:disable-line force-pseudo-nesting
             display: inline-block;
             width: calc(#{percentage(1 / $i)} - #{$spacing});
             margin-#{$global-right}: $spacing;
@@ -146,7 +148,7 @@ $buttongroup-radius-on-each: true !default;
     @if not $buttongroup-radius-on-each {
       border-radius: 0;
 
-      &:first-child{
+      &:first-child {
         border-top-#{$global-left}-radius: $global-radius;
         border-top-#{$global-right}-radius: $global-radius;
       }
@@ -198,7 +200,7 @@ $buttongroup-radius-on-each: true !default;
 
     // Sizes
     @each $size, $value in map-remove($button-sizes, default) {
-      &.#{$size} #{$buttongroup-child-selector} {
+      &.#{$size} #{$buttongroup-child-selector} { // sass-lint:disable-line force-element-nesting
         font-size: $value;
       }
     }
@@ -216,7 +218,7 @@ $buttongroup-radius-on-each: true !default;
         }
       }
       @else {
-        &.#{$name} #{$buttongroup-child-selector} {
+        &.#{$name} #{$buttongroup-child-selector} { // sass-lint:disable-line force-element-nesting
           @include button-hollow;
           @include button-hollow-style($color);
         }
@@ -245,7 +247,7 @@ $buttongroup-radius-on-each: true !default;
       }
     }
 
-    &.stacked-for-small.expanded { // sass-lint:disable-line force-element-nesting
+    &.stacked-for-small.expanded {
       @include breakpoint(small only) {
         display: block;
 
@@ -256,7 +258,7 @@ $buttongroup-radius-on-each: true !default;
       }
     }
 
-    &.stacked-for-medium.expanded { // sass-lint:disable-line force-element-nesting
+    &.stacked-for-medium.expanded {
       @include breakpoint(medium down) {
         display: block;
 
