--- a/scss/foundation.scss
+++ b/scss/foundation.scss
@@ -1,6 +1,6 @@
 /**
  * Foundation for Sites by ZURB
- * Version 6.4.3
+ * Version 6.5.0-rc.1
  * foundation.zurb.com
  * Licensed under MIT Open Source
  */
