Define dropdown menu background in foundation-dropdown-menu mixin

--- a/scss/components/_dropdown-menu.scss
+++ b/scss/components/_dropdown-menu.scss
@@ -148,6 +148,7 @@ $dropdown-menu-item-background-active: transparent !default;
 
     a {
       @include disable-mouse-outline;
+      background: $dropdownmenu-background;
       padding: $dropdownmenu-padding;
     }
 
