refactor: deprecate xy-cell-static() and use xy-cell() to generate classes
Deprecate the` xy-cell-static()` mixin and use `xy-cell()` mixin to generate the XY Grid static classes.

The new arguments of `xy-cells` (added in previous commits) have the following goal: making a clear distinction between cells that should not have any gutter, cells from which the gutter must be removed and cells that should have a gutter but generated seperately/later. See migration notes below.

Changes:
- Add deprecation warning in `xy-cell-static()`
- Add deprecation note in `xy-cell-static()` documentation
- Use `xy-cell()` instead of `xy-cell-static()` with the transformations listed below

Migration notes:
- Use `$output: (...)` instead of separate calls to `xy-cell-static()` and `xy-cell-base()`. This may change in the future with 3 distinguish mixins to generate "base", "size" and "gutters" of the cell.
- Use `$gutter-type: none` for cells without gutters
- Use `$gutters: 0` for cells with a 0-width gutters
- Use `$output: (...)` without "gutters" for cells with gutters that must be generated seperately.
- Remove useless `$breakpoint: $-zf-size` as it is always detected automatically

--- a/scss/xy-grid/_cell.scss
+++ b/scss/xy-grid/_cell.scss
@@ -166,6 +166,12 @@
 
 /// Creates a single breakpoint sized grid. Used to generate our grid classes.
 ///
+/// `xy-cell-static()` is deprecated and will be removed.
+/// Use `xy-cell()` instead with `$output: (size gutters)` to not generate the cell base.
+/// See migration notes at https://git.io/foundation-6-6-0
+///
+/// @deprecated v6.6.0
+///
 /// @param {Keyword|Number} $size [full] - The size of your cell. Can be `full` (default) for 100% width, `auto` to use up available space and `shrink` to use up only required space.
 /// @param {Boolean} $gutter-output [true] - Whether or not to output gutters. Always `true` for margin gutters.
 /// @param {Number|Map} $gutters [$grid-margin-gutters] - Map or single value for gutters.
@@ -180,6 +186,7 @@
   $breakpoint: $-zf-zero-breakpoint,
   $vertical: false
 ) {
+  @warn 'xy-cell-static() mixin is deprecated and will be removed. Use "xy-cell()" instead. See migration notes at https://git.io/foundation-6-6-0';
 
   $gutter: -zf-get-bp-val($gutters, $breakpoint);
   $gutter-position: if($vertical == true, top bottom, left right);
