refactor: move "-zf-each-breakpoint()" mixin iteration logics to "-zf-each-breakpoint()"
Changes:
* Add mixin `-zf-each-breakpoint-in()`
* Add function `-zf-bool()` to convert values to Booleans
* Refactor mixin `-zf-each-breakpoint()`  to rely on `-zf-each-breakpoint-in()`

There should be no change in the `-zf-each-breakpoint` API

--- a/scss/util/_value.scss
+++ b/scss/util/_value.scss
@@ -158,3 +158,14 @@
     @error '`#{$map}` is not a valid map';
   }
 }
+
+/// Convert the given `$val` to a Boolean. Empty values are considered as false.
+////
+/// @access private
+///
+/// @param {*} $val - Value to convert.
+///
+/// @returns {Boolean} Converted Boolean value.
+@function -zf-bool($val) {
+  @return $val != false and has-value($val);
+}
