--- a/scss/components/_dropdown-menu.scss
+++ b/scss/components/_dropdown-menu.scss
@@ -28,11 +28,11 @@ $dropdownmenu-min-width: 200px !default;
 
 /// Background color for top level items.
 /// @type Color
-$dropdownmenu-background: $white !default;
+$dropdownmenu-background: null !default;
 
 /// Background color for dropdowns.
 /// @type Color
-$dropdownmenu-submenu-background: $dropdownmenu-background !default;
+$dropdownmenu-submenu-background: $white !default;
 
 /// Padding for top level items.
 /// @type Number
@@ -148,12 +148,16 @@ $dropdown-menu-item-background-active: transparent !default;
 
     a {
       @include disable-mouse-outline;
+    }
+
+    // Top-level item
+    > li > a {
       background: $dropdownmenu-background;
       padding: $dropdownmenu-padding;
     }
 
-    // Active state
-    .is-active > a {
+    // Top-level item active state
+    > li.is-active > a {
       background: $dropdown-menu-item-background-active;
       color: $dropdown-menu-item-color-active;
     }
