--- a/scss/components/_accordion.scss
+++ b/scss/components/_accordion.scss
@@ -99,11 +99,9 @@ $accordion-content-padding: 1rem !default;
   line-height: 1;
   color: $color;
 
-  :last-child {
-    &:not(.is-active) > & {
-      border-bottom: $border;
-      border-radius: 0 0 $global-radius $global-radius;
-    }
+  :last-child:not(.is-active) > & {
+    border-bottom: $border;
+    border-radius: 0 0 $global-radius $global-radius;
   }
 
   &:hover,
