fix: fix generated offset for zero gutters in "xy-cell-offset" #11471
Closes https://github.com/zurb/foundation-sites/issues/11471

--- a/scss/xy-grid/_position.scss
+++ b/scss/xy-grid/_position.scss
@@ -24,7 +24,8 @@
 
   @include -zf-breakpoint-value($breakpoint, $gutters) {
     $gutter: rem-calc($-zf-bp-value) / 2;
-    $size: if($gutter-type == 'margin', calc(#{xy-cell-size($n)} + #{$gutter}), #{xy-cell-size($n)});
+    $gutter-margin: if($gutter-type == 'margin', $gutter, 0);
+    $size: if($gutter-margin == 0, #{xy-cell-size($n)}, calc(#{xy-cell-size($n)} - #{rem-calc($gutter-margin)}));
 
     margin-#{$direction}: #{$size};
   }
