fix: use given value if no breakpoint value is found in mixin "-zf-breakpoint-value()"
Use the original value if no breakpoint value can be found in `$map` in the `-zf-breakpoint-value()` mixin. With this commit, `$name` can safely be a String value without being considered as a breakpoint name.

--- a/scss/util/_mixins.scss
+++ b/scss/util/_mixins.scss
@@ -360,7 +360,10 @@
   @else {
     // breakpoint name
     @if type-of($name) == 'string' {
-      $name: -zf-get-bp-val($map, $name);
+      $bp-value: -zf-get-bp-val($map, $name);
+      @if $bp-value != null {
+        $name: $bp-value;
+      }
     }
 
     // breakpoint value
